Android/AndroidStudioProjects/CITYFAST/app/src/main/java/com/example/cityfast/registration.java
package com.example.cityfast;

import androidx.appcompat.app.AppCompatActivity;

import android.content.Intent;
import android.os.Bundle;
import android.util.Log;
import android.view.View;
import android.widget.Button;
import android.widget.EditText;
import android.widget.Spinner;
import android.widget.TextView;
import android.widget.Toast;

import com.android.volley.Request;
import com.android.volley.Response;
import com.android.volley.VolleyError;
import com.android.volley.toolbox.StringRequest;

import java.net.URL;
import java.util.HashMap;
import java.util.Map;

public class registration extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_registration);

        Spinner spin = findViewById(R.id.login);
        EditText phone = findViewById(R.id.phone);
        EditText password = findViewById(R.id.password);
        Button vhod = findViewById(R.id.vhod);
        Button noacc = findViewById(R.id.noacc);

        noacc.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View v) {
                Intent i = new Intent(getApplicationContext(), Login.class);
                startActivity(i);
            }
        });
        vhod.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View v) {
                if(phone.getText()!=null && password.getText()!=null) {

                    /*


                     */
                    String url = "http://10.0.0.2:*****/login";
                    StringRequest postRequest = new StringRequest(Request.Method.POST, url,
                            new Response.Listener<String>()
                            {
                                @Override
                                public void onResponse(String response) {
                                    // response
                                    Log.d("Response", response);
                                }
                            },
                            new Response.ErrorListener()
                            {
                                @Override
                                public void onErrorResponse(VolleyError error) {
                                    // error
                                }
                            }
                    ) {
                        @Override
                        protected Map<String, String> getParams()
                        {
                            Map<String, String>  params = new HashMap<String, String>();
                            params.put("name", "Alif");
                            params.put("domain", "http://itsalif.info");

                            return params;
                        }
                    };
                    queue.add(postRequest);

                    Intent i = new Intent(getApplicationContext(), Zakaz.class);
                    startActivity(i);
                }
            }
        });
    }
}